<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="34dp"
    tools:context=".profile_section">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"


        android:layout_height="match_parent"
        android:background="@drawable/profile_section_background"
        android:paddingBottom="36dp"
       >


        <ImageButton
            android:id="@+id/log_out_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_margin="24dp"
            android:background="@drawable/logout_background"
            android:src="@drawable/baseline_logout_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:contentDescription="@string/this_a_button_help_you_log_out_from_your_account"
            app:layout_constraintStart_toStartOf="parent"
            android:tooltipText="Log out"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="84dp"
            android:background="@drawable/profile_background"
            android:contentDescription="profile_photo"
            android:padding="8dp"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.138"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text_profile_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"

            android:layout_marginTop="84dp"

            android:fontFamily="@font/bakbak_onhead"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:minWidth="46dp"
            android:minHeight="46dp"
            android:layout_marginStart="98dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.317"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:outlineProvider="background"
                    android:labelFor="@+id/email_text_profile_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="icon_email"
                    android:src="@drawable/baseline_email_24"
                    android:layout_marginEnd="4dp"/>

                <TextView
                    android:id="@+id/email_text_profile_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/ankitkr_gmail_com"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="icon_phone"
                    android:src="@drawable/baseline_smartphone_24" />

                <TextView
                    android:id="@+id/phone_number_profile_section"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:text="@string/_1234567890"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>